force-app/main/default/objects/Product_Mapping__c/Product_Mapping__c.object-meta.xml
<CustomObject>
    <label>Product Mapping</label>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>Product Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>