force-app/main/default/objects/Product_Mapping__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Area</label>
    <referenceTo>Area__c</referenceTo>
    <relationshipLabel>Product Mappings</relationshipLabel>
    <relationshipName>Product_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>