force-app/main/default/objects/Product_Mapping__c/fields/Area_Area_Name__c.field-meta.xml
<CustomField>
    <fullName>Area_Area_Name__c</fullName>
    <formula>TEXT(Area__r.Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area Area Name</label>
    <type>Text</type>
</CustomField>