force-app/main/default/objects/Product_Mapping__c/fields/ASM_TSM_Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>ASM_TSM_Employee_Code__c</fullName>
    <formula>Exectuive__r.ASM_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASM Employee Code</label>
    <type>Text</type>
</CustomField>