force-app/main/default/objects/Product_Mapping__c/fields/Auto_Mapping_from_Primary_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Auto_Mapping_from_Primary_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Mapping from Primary Assignment</label>
    <type>Checkbox</type>
</CustomField>