force-app/main/default/objects/Product_Mapping__c/fields/Chanel__c.field-meta.xml
<CustomField>
    <fullName>Chanel__c</fullName>
    <label>Sales Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Chanel</valueSetName>
    </valueSet>
</CustomField>