force-app/main/default/objects/Product_Mapping__c/fields/Child_Depot__c.field-meta.xml
<CustomField>
    <fullName>Child_Depot__c</fullName>
    <label>Delivery Plant</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Parent_Depot__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Child_Depot</valueSetName>
    </valueSet>
</CustomField>