force-app/main/default/objects/Product_Mapping__c/fields/Cloning_From_Customer_Deactivation__c.field-meta.xml
<CustomField>
    <fullName>Cloning_From_Customer_Deactivation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cloning From Customer Deactivation</label>
    <type>Checkbox</type>
</CustomField>