force-app/main/default/objects/Product_Mapping__c/fields/Credit_Description__c.field-meta.xml
<CustomField>
    <fullName>Credit_Description__c</fullName>
    <label>Credit Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Payment_Term__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Credit_Description</valueSetName>
    </valueSet>
</CustomField>