force-app/main/default/objects/Product_Mapping__c/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <label>Credit Limit (In Rupees)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>