force-app/main/default/objects/Product_Mapping__c/fields/Credit_Terms__c.field-meta.xml
<CustomField>
    <fullName>Credit_Terms__c</fullName>
    <label>Credit Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Credit_Terms</valueSetName>
    </valueSet>
</CustomField>