force-app/main/default/objects/Product_Mapping__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Mappings</relationshipLabel>
    <relationshipName>Product_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>