force-app/main/default/objects/Product_Mapping__c/fields/Customer_Delivery_Plant_Pair__c.field-meta.xml
<CustomField>
    <fullName>Customer_Delivery_Plant_Pair__c</fullName>
    <formula>Customer__r.SAP_Customer_Code__c +&apos;_&apos;+Text(Child_Depot__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Delivery Plant Pair</label>
    <type>Text</type>
</CustomField>