force-app/main/default/objects/Product_Mapping__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Product Mappings</relationshipLabel>
    <relationshipName>Product_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>