force-app/main/default/objects/Product_Mapping__c/fields/Exectuive__c.field-meta.xml
<CustomField>
    <fullName>Exectuive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>