force-app/main/default/objects/Product_Mapping__c/fields/Executive_Delivary_Plant__c.field-meta.xml
<CustomField>
    <fullName>Executive_Delivary_Plant__c</fullName>
    <formula>Exectuive__c +&apos;_&apos;+ TEXT(Child_Depot__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Executive_Delivary_Plant</label>
    <type>Text</type>
</CustomField>