force-app/main/default/objects/Product_Mapping__c/fields/Executive_Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>Executive_Employee_Code__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Exectuive__c)),
  Exectuive__r.Employee_Code__c,
  Employee__r.Employee_Code__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Executive Employee Code</label>
    <type>Text</type>
</CustomField>