force-app/main/default/objects/Product_Mapping__c/fields/Executive_Name1__c.field-meta.xml
<CustomField>
    <fullName>Executive_Name1__c</fullName>
    <formula>Exectuive__r.FirstName +&apos; &apos;+ Exectuive__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Executive Name</label>
    <type>Text</type>
</CustomField>