force-app/main/default/objects/Product_Mapping__c/fields/Executive_Name__c.field-meta.xml
<CustomField>
    <fullName>Executive_Name__c</fullName>
    <label>Not in Use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>