force-app/main/default/objects/Product_Mapping__c/fields/Hierarchy_Number__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Number__c</fullName>
    <formula>Exectuive__r.Heirarchial_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hierarchy Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>