force-app/main/default/objects/Product_Mapping__c/fields/is_Executive_Active__c.field-meta.xml
<CustomField>
    <fullName>is_Executive_Active__c</fullName>
    <formula>Exectuive__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Executive Active</label>
    <type>Checkbox</type>
</CustomField>