force-app/main/default/objects/Product_Mapping__c/fields/Mapping_Id__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Id__c</fullName>
    <externalId>true</externalId>
    <label>Mapping Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>