force-app/main/default/objects/Product_Mapping__c/fields/Parent_Depot__c.field-meta.xml
<CustomField>
    <fullName>Parent_Depot__c</fullName>
    <label>Sales Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Parent_Depot</valueSetName>
    </valueSet>
</CustomField>