force-app/main/default/objects/Product_Mapping__c/fields/Payment_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type_Formula__c</fullName>
    <formula>TEXT(Customer__r.Payment_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Type Formula</label>
    <type>Text</type>
</CustomField>