force-app/main/default/objects/Product_Mapping__c/fields/PDP__c.field-meta.xml
<CustomField>
    <fullName>PDP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PDP Day</label>
    <referenceTo>PDP__c</referenceTo>
    <relationshipLabel>Product Mappings</relationshipLabel>
    <relationshipName>Product_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>