force-app/main/default/objects/Product_Mapping__c/fields/PDP_Day__c.field-meta.xml
<CustomField>
    <fullName>PDP_Day__c</fullName>
    <label>PDP Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PDP_Day</valueSetName>
    </valueSet>
</CustomField>