force-app/main/default/objects/Product_Mapping__c/fields/PDP_Name__c.field-meta.xml
<CustomField>
    <fullName>PDP_Name__c</fullName>
    <label>PDP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>