force-app/main/default/objects/Product_Mapping__c/fields/Primary_Customer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Mappings (Primary Customer)</relationshipLabel>
    <relationshipName>Product_Mappings1</relationshipName>
    <type>Lookup</type>
</CustomField>