force-app/main/default/objects/Product_Mapping__c/fields/Primary_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_Code__c</fullName>
    <formula>Primary_Customer__r.SAP_Customer_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Customer Code</label>
    <type>Text</type>
</CustomField>