force-app/main/default/objects/Product_Mapping__c/fields/Primary_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_Id__c</fullName>
    <label>Primary Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>