force-app/main/default/objects/Product_Mapping__c/fields/Secondary_Customer_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Customer_Customer_Code__c</fullName>
    <formula>Customer__r.Customer_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Customer Customer Code</label>
    <type>Text</type>
</CustomField>