force-app/main/default/objects/Product_Mapping__c/fields/Secondary_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Customer_Name__c</fullName>
    <formula>IF(Customer_Type__c ==&apos;Secondary Customer&apos;, Customer__r.Name,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Customer Name</label>
    <type>Text</type>
</CustomField>