force-app/main/default/objects/Product_Mapping__c/fields/Secondary_Customer_Outlet_Id__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Customer_Outlet_Id__c</fullName>
    <formula>Customer__r.Outlet_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Customer Outlet Id</label>
    <type>Text</type>
</CustomField>