force-app/main/default/objects/Product_Mapping__c/fields/Secondary_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Customer_Type__c</fullName>
    <formula>TEXT(Customer__r.Secondary_Customer_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Customer Type</label>
    <type>Text</type>
</CustomField>