force-app/main/default/objects/Product_Mapping__c/fields/Sub_Stockiest__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stockiest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Stockiest</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Mappings (Sub Stockiest)</relationshipLabel>
    <relationshipName>Product_Mappings2</relationshipName>
    <type>Lookup</type>
</CustomField>