force-app/main/default/objects/Product_Mapping__c/fields/Sub_Stockiest_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stockiest_Code__c</fullName>
    <formula>Sub_Stockiest__r.Customer_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Stockiest Code</label>
    <type>Text</type>
</CustomField>