force-app/main/default/objects/Product_Mapping__c/fields/Sub_Stockiest_Id__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stockiest_Id__c</fullName>
    <label>Sub Stockiest Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>