force-app/main/default/objects/Product_Mapping__c/fields/Territory_Id__c.field-meta.xml
<CustomField>
    <fullName>Territory_Id__c</fullName>
    <label>Territory Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>