force-app/main/default/objects/Product_Mapping__c/fields/Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Name__c</fullName>
    <formula>Area__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Name</label>
    <type>Text</type>
</CustomField>