force-app/main/default/objects/Product_Mapping__c/validationRules/Executive_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Executive_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Employee__c ) &amp;&amp; ISBLANK(Exectuive__c )</errorConditionFormula>
    <errorMessage>Please select the exectuive</errorMessage>
</ValidationRule>