force-app/main/default/objects/Product_Mapping__c/validationRules/Sales_Channel_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Channel_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>Customer_Type__c == &apos;Primary Customer&apos;
&amp;&amp;
ISBLANK(TEXT(Chanel__c))</errorConditionFormula>
    <errorDisplayField>Chanel__c</errorDisplayField>
    <errorMessage>Please Fill the Sales Channel</errorMessage>
</ValidationRule>