force-app/main/default/objects/Product_Mapping__c/validationRules/Secondary_Customer_Primary_Customer.validationRule-meta.xml
<ValidationRule>
    <fullName>Secondary_Customer_Primary_Customer</fullName>
    <active>true</active>
    <errorConditionFormula>Customer_Type__c == &apos;Secondary Customer&apos; &amp;&amp;
ISBLANK(Primary_Customer__c )</errorConditionFormula>
    <errorDisplayField>Primary_Customer__c</errorDisplayField>
    <errorMessage>Please Fill the Primary Customer</errorMessage>
</ValidationRule>