force-app/main/default/objects/Product_Mapping__c/validationRules/Territoty_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Territoty_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>Customer_Type__c == &apos;Primary Customer&apos;
&amp;&amp;
ISBLANK( Area__c )</errorConditionFormula>
    <errorDisplayField>Area__c</errorDisplayField>
    <errorMessage>Please Fill the Territory</errorMessage>
</ValidationRule>