force-app/main/default/objects/Product_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Exectuive__c</columns>
    <columns>Employee__c</columns>
    <columns>Customer__c</columns>
    <columns>Primary_Customer__c</columns>
    <columns>Sub_Stockiest__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All</label>
</ListView>